Revert "Fix double-tap issues in sub-menu on iOS devices"
This reverts commit a4e9e831cbfc852e0d89fed5e225b3d693119902.

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -118,7 +118,6 @@ nav.toggled ul ul.sub-menu {
 	}
 
 	.main-navigation .main-nav ul ul.toggled-on {
-		display: block;
 		position: relative;
 		top: 0;
 		left: auto;
@@ -129,7 +128,6 @@ nav.toggled ul ul.sub-menu {
 	nav.main-navigation ul li:hover > ul:not(.toggled-on),
 	nav.secondary-navigation ul li:hover > ul:not(.toggled-on),
 	.secondary-navigation .main-nav ul ul:not(.toggled-on)	{
-		display: none;
 		left: -99999px;
 		position: absolute;
 	}
